test: Auth, CORS 테스트 추가